# ComputerVisionTraining

./: README.md
c++/ex01/: CMakeLists.txt  ex01.cpp
c++/ex02/: CMakeLists.txt  ex02.cpp
c++/ex03/: CMakeLists.txt  ex03.cpp
c++/ex04/: CMakeLists.txt  ex04.cpp
c++/ex05/: CMakeLists.txt  ex05.cpp
c++/ex06/: CMakeLists.txt
c++/ex07/: CMakeLists.txt  ex07.cpp
c++/ex08/: CMakeLists.txt  ex08.cpp
c++/ex09/: CMakeLists.txt
c++/ex10/: CMakeLists.txt  ex10.cpp
c++/ex11/: CMakeLists.txt  ex11.cpp
c++/ex12/: CMakeLists.txt  ex12.cpp  matrix.txt
c++/ex13/: CMakeLists.txt  ex13.cpp
c++/ex14/: CMakeLists.txt  ex14.cpp
c++/ex15/: ex15.cpp
c++/ex15-pt2/: ex15.cpp
c++/ex15-pt3/: CMakeLists.txt  ex15.cpp
c++/ex16/: CMakeLists.txt
